[tool.poetry]
name = "pythonguis"
version = "0.1.0"
description = ""
authors = ["alejo <yayomx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.56.0"
tkdesigner = "^1.0.4"
jupyterlab = "^3.2.9"
voila = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
